Fixed Create Study Set spacing issues

--- a/app/src/components/createSet/createSet.css
+++ b/app/src/components/createSet/createSet.css
@@ -3,6 +3,7 @@
     width: 100%;
     display: grid;
     grid-template-rows: 50px 200px auto 50px;
+    grid-area: content;
 
 }
 
